counter vert align fix

--- a/cigionline/static/themes/space_series/css/_article_series_page.scss
+++ b/cigionline/static/themes/space_series/css/_article_series_page.scss
@@ -96,7 +96,7 @@ body {
               position: absolute;
               right: 0;
               text-align: right;
-              top: -0.8em;
+              top: -0.7em;
               width: 2.5em;
 
               .play-icon-wrapper {
@@ -107,7 +107,7 @@ body {
                   align-items: center;
                   color: $white;
                   display: flex;
-                  height: 1.5em;
+                  height: 1.4em;
                   justify-content: center;
                   transition: color 0.2s ease;
                   width: 1.5em;
